--- a/99_old/research_20230603.html
+++ b/99_old/research_20230603.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 
 <head>
 
@@ -69,108 +69,131 @@
 				<span></span>
 				<span></span>
 				<span></span>
-		</div>
-		<nav class="globalMenuSp">
-			<ul>
-				<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
-				<li><a href=profile_en.html>PROFILE</a></li>
-				<li><a href=cv.html>CV</a></li>
-				<li><a href=link.html>LINKS</a></li>
-				<li><a href=profile_jp.html>プロフィール</a></li>
-				<li><a href=research.html>研究</a></li>
-			</ul>
-		</nav>
+			</div>
+			<nav class="globalMenuSp">
+				<ul>
+					<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
+					<li><a href=profile_en.html>PROFILE</a></li>
+					<li><a href=cv.html>CV</a></li>
+					<li><a href=link.html>LINKS</a></li>
+					<li><a href=profile_jp.html>プロフィール</a></li>
+					<li><a href=research.html>研究</a></li>
+				</ul>
+			</nav>
 		</div>
 		<div class="h_img animation">
-			<img src="./images/profile_v01.png" alt="ヘッダー画像">
+			<img src="./images/research_v01.png" alt="ヘッダー画像">
 			<div class="section_t page_title">
 				<h2>
-					Profile
+					研究課題
 				</h2>
 			</div>
 		</div>
-	  </header>
+	</header>
 	<main>
 		<article>
-			<section class="profile animation">
-				<div class="p_area">
-					<ul class="p_ul">
-						<li class="pro_li">
-							<div class="pro_img">
-								<img src="./images/profile_pic_20221008.jpg" alt="プロフィール画像">
+			<section class="research_now animation">
+				<div class="section_t top_t">
+					<h2>
+						継続中の研究課題
+						<span>current projects</span>
+					</h2>
+				</div>
+				<div class="r_area">
+					<ul class="r_ul">
+						<li>
+							<div class="h3_title">
+								<h3>インターネット・ゲームの問題使用に対する認知行動療法の有効性検証</h3>
+								<p>2023.4<br>
+								<span>～現在</span></p>
 							</div>
-							<div class="pro_name">
-								<div class="h3_title">
-									<h3 class="modi_f_pro h3_top">NAME</span></h3>
-								</div>
-								<div class="p_titles">
-									<ol class="p_titles_ol">
-										<li class="pro_titles_li pro_name_li">
-											<b>Toshitaka Hammaura</b>
-										</li>
-									</ol>
-								</div>
-								<div class="h3_title">
-									<h3 class="modi_f_pro h3_top">Current positions</span></h3>
-								</div>
-								<div class="p_titles">
-									<ol class="p_titles_ol">
-										<li class="pro_titles_li pro_name_li">
-											<b>JSPS Overseas Research Fellow,</b><br>
-											Japan Society for the Promotion of Science
-										</li>
-										<li class="pro_titles_li pro_name_li">
-											<b>Visiting Scholar,</b><br>
-											Department of Psychology,
-											Flinders University
-										</li>
-										<li class="pro_titles_li pro_name_li">
-											<b>Invited Researcher,</b><br>
-											KDDI Research, Inc.<br>
-										</li>
-										<li class="pro_titles_li pro_name_li">
-											<b>Visiting Researcher,</b><br>
-											National Center for Cognitive Behavior Therapy and Research,<br>
-											National Center of Neurology and Psychiatry
-										</li>
-									</ol>
-								</div>
-							</div>
+							<p>日本学術振興会 科学研究費助成事業（基盤Ｂ；研究代表者）</p>
 						</li>
 						<li>
 							<div class="h3_title">
-								<h3 class="modi_f_pro h3_top">Lisences</span></h3>
+								<h3>ゲーム症の解明と低減にむけた家族支援からの包括的アプローチ</h3>
+								<p>2023.4<br>
+								<span>～現在</span></p>
 							</div>
-							<div class="p_titles">
-								<ol class="p_titles_ol">
-									<li class="pro_titles_li pro_name_li">
-										<b>Clinical Psychologist,</b><br>
-										Foundation of the Japanese Certification Board for Clinical Psychologists. (Japan)
-									</li>
-									<li class="pro_titles_li pro_name_li">
-										<b>Certified Public Psychologist,</b><br>
-										Ministry of Health, Labour, and Welfare / Ministry of Education, Culture, Sports, Science and Technology. (Japan)
-									</li>
-								</ol>
-							</div>
+							<p>日本学術振興会 海外特別研究員制度（研究代表者）</p>
 						</li>
 						<li>
 							<div class="h3_title">
-								<h3 class="modi_f_pu">Education</h3>
+								<h3>児童青年のインターネットゲーム障害の病態及び心理社会的リスク要因の解明</h3>
+								<p>2021.4<br>
+								<span>～現在</span></p>
 							</div>
-							<div class="p_titles">
-								<ol class="p_titles_ol">
-									<li class="pro_titles_li">
-										2006.09-2010.05. <b>Bachelor of Art in Psychology,</b> Trinity Western University, Langley, BC, Canada. Minor in Business Administration.
-									</li>
-									<li class="pro_titles_li">
-										2012.04-2015.08. <b>Master of Science in Clinical Psychology,</b> California State University, Fullerton, CA, USA. 
-									</li>
-									<li class="pro_titles_li">
-										2016.04-2019.03. <b>Doctor of Philosophy in Education (Clinical Psychology),</b> University of Tokyo, Bunkyo, Tokyo, Japan.
-									</li>
-								</ol>
+							<p>日本学術振興会 科学研究費助成事業（基盤Ｃ；研究分担者）</p>
+						</li>
+						<li>
+							<div class="h3_title">
+								<h3>Understanding and Reducing Emotional Difficulties in Gaming Disorder</h3>
+								<p>2020.4<br>
+								<span>～現在</span></p>
 							</div>
+							<p>日本学術振興会 科学研究費助成事業（若手研究；研究代表者）</p>
+						</li>
+					</ul>
+				</div>
+			</section>
+			<section class="research_now animation">
+				<div class="section_t top_t">
+					<h2>
+						倫理審査委員会の承認を得た研究課題（公告用のみ）
+						<span>approved projects</span>
+					</h2>
+				</div>
+				<div class="r_area">
+					<ul class="r_ul">
+						<li>
+							<div class="h3_title">
+								<h3>青年期におけるゲーム嗜癖と内在化問題の関連に着目した縦断的観察研究</h3>
+							</div>
+  							<p>承認番号：A2021-065，<a href=https://toshitaka-hamamura.github.io/speg2/public_notice_ver2.0.pdf>公告文書</a></p>
+						</li>
+					</ul>
+				</div>
+			</section>
+			<section class="research_arc animation">
+				<div class="section_t">
+					<h2>
+						これまでの研究課題
+						<span>previous projects</span>
+					</h2>
+				</div>
+				<div class="r_area">
+					<ul class="r_ul">
+						<li>
+							<div class="h3_title">
+								<h3>ギャンブル等依存 症問題の実態調査の実施方法の策定に係る検討</h3>
+								<p>2022.11<br>
+								<span>～2023.3</span></p>
+							</div>
+							<p>厚生労働省 令和４年度障害者総合福祉推進事業費補助金（研究分担者）</p>
+						</li>
+						<li>
+							<div class="h3_title">
+								<h3>⾏思春期における行動依存への支援と関連障害の解明</h3>
+								<p>2020.4<br>
+								<span>～2023.3</span></p>
+							</div>
+							<p>日本学術振興会 科学研究費助成事業（特別研究員奨励費；研究代表者）</p>
+						</li>
+						<li>
+							<div class="h3_title">
+								<h3>ネガティブな気分回復における期待感の役割：文化的および発達的検討</h3>
+								<p>2017.4<br>
+								<span>～2019.3</span></p>
+							</div>
+							<p>日本学術振興会 科学研究費助成事業（特別研究員奨励費）</p> 
+						</li>
+						<li>
+							<div class="h3_title">
+								<h3>問題飲酒とコンピュータ介入</h3>　
+								<p>2016.4<br>
+								<span>～2019.3</span></p>
+							</div>
+							<p>東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム</p>
 						</li>
 					</ul>
 				</div>
@@ -187,7 +210,7 @@
 				</div>
 				<div class="sns">
 					<a href="https://twitter.com/hamamura_toshi"><i class="fa fa-twitter"></i></a>
-					<a href="https://www.facebook.com/toshitaka.hamamura/"><i class="fa fa-facebook"></i></a>
+					<a href="https://www.facebook.com/toshitaka.hamamura"><i class="fa fa-facebook"></i></a>
 					<a href="https://www.linkedin.com/in/toshitaka-hamamura-1195b998/"><i class="fa fa-linkedin"></i></a>
 					<a href="https://www.researchgate.net/profile/Toshitaka-Hamamura"><i class="fa fa-researchgate"></i></a>
 					<a href="https://github.com/toshitaka-hamamura"><i class="fa fa-github"></i></a>
@@ -205,4 +228,3 @@
 	</footer>
 </body>
 </html>
-  
