--- a/research.html
+++ b/research.html
@@ -95,6 +95,24 @@
 			<section class="research_now animation">
 				<div class="section_t top_t">
 					<h2>
+						倫理審査委員会の承認を得た研究課題（公告用のみ）
+						<span>approved projects</span>
+					</h2>
+				</div>
+				<div class="r_area">
+					<ul class="r_ul">
+						<li>
+							<div class="h3_title">
+								<h3>青年期におけるゲーム嗜癖と内在化問題の関連に着目した縦断的観察研究</h3>
+							</div>
+  							<p>承認番号：A2021-065，<a href=https://toshitaka-hamamura.github.io/speg2/public_notice_ver2.0.pdf>公告文書</a></p>
+						</li>
+					</ul>
+				</div>
+			</section>
+			<section class="research_now animation">
+				<div class="section_t top_t">
+					<h2>
 						継続中の研究課題
 						<span>current projects</span>
 					</h2>
