--- a/news.html
+++ b/news.html
@@ -111,18 +111,19 @@
 				</div>
 				<div class="h_n_area">
 					<ul class="h_n_ul">
+						<li><span>2023.08.12</span>A lead-author manuscript has been accepted at Addictive Behaviors: Standalone effects of focus mode and social comparison functions on problematic smartphone use among adolescents.</li>
 						<li><span>2023.04.22</span>I am at Flinders University (Australia) to work under Dr. Daniel King as a JSPS Overseas Research Fellow.</li>
-						<li><span>2023.02.22</span><a href="https://doi.org/10.1186/s40359-023-01095-5">A lead-author manuscript</a> was accepted at BMC Psychology.</li>
-						<li><span>2023.01.11</span><a href="https://osf.io/g9ep7">A co-author manuscript</a> was archived in preprint.</li>
+						<li><span>2023.02.22</span><a href="https://doi.org/10.1186/s40359-023-01095-5">A lead-author manuscript</a> has been accepted at BMC Psychology: Validity, reliability, and correlates of the Smartphone Addiction Scale–Short Version among Japanese adults.</li>
+						<li><span>2023.01.11</span><a href="https://osf.io/g9ep7">A co-author manuscript</a> has been archived in preprint.</li>
 						<li><span>2022.12.20</span>第22回日本認知療法・認知行動療法学会（JACT）若手優秀演題賞（一般演題）を受賞しました。</li>
 						<li><span>2022.12.02</span>Visiting the Department of Psychology at National Taiwan University from Dec. 2 2022 to Jan. 30 2023 as a visiting scholar</li>
-						<li><span>2022.11.21</span><a href="https://doi.org/10.31234/osf.io/2uzsd">A lead-author manuscript</a> was archived in preprint.</li>
+						<li><span>2022.11.21</span><a href="https://doi.org/10.31234/osf.io/2uzsd">A lead-author manuscript</a> has been archived in preprint.</li>
 						<li><span>2022.11.11</span>第22回日本認知療法・認知行動療法学会（JACT）の一般演題で口頭発表しました。</li>
 						<li><span>2022.09.09</span>2022年度アルコール・薬物依存関連学会合同学術総会の一般演題で口頭発表しました。</li>
 						<li><span>2021.12.17</span>2021年度アルコール・薬物依存関連学会合同学術総会の一般演題で口頭発表しました。</li>
-						<li><span>2021.12.14</span><a href="https://doi.org/10.1016/j.abrep.2021.100400">A lead-author manuscript</a> was accepted at Addictive Behaviors Reports.</li>
-						<li><span>2021.10.19</span><a href="https://doi.org/10.1038/s41398-021-01696-x">A co-author manuscript</a> was accepted at Translational Psychiatry.</li>
-						<li><span>2021.07.31</span><a href="https://doi.org/10.1016/j.jpsychires.2021.07.054">A co-author manuscript</a> was accepted at Journal of Psychiatric Research.</li>
+						<li><span>2021.12.14</span><a href="https://doi.org/10.1016/j.abrep.2021.100400">A lead-author manuscript</a> has been accepted at Addictive Behaviors Reports.</li>
+						<li><span>2021.10.19</span><a href="https://doi.org/10.1038/s41398-021-01696-x">A co-author manuscript</a> has been accepted at Translational Psychiatry.</li>
+						<li><span>2021.07.31</span><a href="https://doi.org/10.1016/j.jpsychires.2021.07.054">A co-author manuscript</a> has been accepted at Journal of Psychiatric Research.</li>
 						<li><span>2021.02.05</span>ウェブサイトを立ち上げました。</li>
 					</ul>
 				</div>
