--- a/index.html
+++ b/index.html
@@ -133,11 +133,14 @@
 				</div>
 				<div class="h_n_area">
 					<ul class="h_n_ul">
-						<li><span>2023.08.12</span>A lead-author manuscript has been accepted at Addictive Behaviors: Standalone effects of focus mode and social comparison functions on problematic smartphone use among adolescents.</li>
+						<li style="padding-left: 100px; text-indent: -100px;"><span>2023.08.24</span>An oral presentation was given at the 8th International Conference on Behavioural Addictions.
+							<br>Has problematic smartphone use changed between before and three years into the pandemic?</br></li>
+						<li style="padding-left: 100px; text-indent: -100px;"><span>2023.08.12</span>A lead-author manuscript has been accepted at Addictive Behaviors.
+							<br><a href="https://doi.org/10.1016/j.addbeh.2023.107834">Standalone effects of focus mode and social comparison functions on problematic smartphone use among adolescents</a></br></li>
 						<li><span>2023.04.22</span>I am at Flinders University (Australia) to work under Dr. Daniel King as a JSPS Overseas Research Fellow.</li>
-						<li><span>2023.02.22</span><a href="https://doi.org/10.1186/s40359-023-01095-5">A lead-author manuscript</a> has been accepted at BMC Psychology: Validity, reliability, and correlates of the Smartphone Addiction Scale–Short Version among Japanese adults.</li>
+						<li style="padding-left: 100px; text-indent: -100px;"><span>2023.02.22</span>A lead-author manuscript has been accepted at BMC Psychology.
+							<br><a href="https://doi.org/10.1186/s40359-023-01095-5">Validity, reliability, and correlates of the Smartphone Addiction Scale–Short Version among Japanese adults</a></br></li>
 						<li><span>2023.01.11</span><a href="https://osf.io/g9ep7">A co-author manuscript</a> has been archived in preprint.</li>
-						<li><span>2022.12.20</span>第22回日本認知療法・認知行動療法学会（JACT）若手優秀演題賞（一般演題）を受賞しました。</li>
 					</ul>
 				</div>
 				<div class="btn animation">
