--- a/research.html
+++ b/research.html
@@ -155,7 +155,7 @@
 						</li>
 						<li>
 							<div class="h3_title">
-								<h3>⾏思春期における行動依存への支援と関連障害の解明</h3>
+								<h3>思春期における行動依存への支援と関連障害の解明</h3>
 								<p>2020.4<br>
 								<span>～2023.3</span></p>
 							</div>
